perf(core): reuse settlement storage and defer multi-fill materialization